1. zero px on page margins - stop the gap round the edges

--- a/app/assets/stylesheets/default.css.sass
+++ b/app/assets/stylesheets/default.css.sass
@@ -9,6 +9,7 @@ body
   font-size: 12px
   color: $white
   background: $slate-grey
+  margin: 0 0
 
   a 
     text-decoration: underline
